# bids-feat

./: Dockerfile  README.md  manifest.json  pyproject.toml  run.py
fw_gear_bids_feat/: feat_higher_level_analysis.py  feat_lower_level_analysis.py  main.py  metadata.py  parser.py  support_functions.py
utils/: dry_run.py  feat_html_singlefile.py
