[tool.poetry]
name = "fw-gear-bids-feat"
version = "1.0.3"
description = "FSL's FEAT (FMRI Expert Analysis Tool). As implemented in this Gear, FEAT first level analysis will act on any generic bids compliant pipeline outputs. Voxelwise activation analyses for a single (or multiple) task will be generated. A template FSF design file is required, and all processing steps indicated in the design file will be followed."
authors = ["Flywheel <support@flywheel.io>"]
readme = "README.md"
license = "MIT"
keywords = [
    "Flywheel",
    "Gears"
]
repository = "https://gitlab.com/flywheel-io/flywheel-apps/bids-qsiprep"
classifiers = [
    "Topic :: Scientific/Engineering"
]

[tool.poetry.dependencies]
python = "^3.8.10"
flywheel-gear-toolkit = "^0.6.14"
flywheel-sdk = "^17.5.0"
psutil = "^5.9.0"
beautifulsoup4 = "^4.11.1"
errorhandler = "^2.0.1"
nibabel = "^5.0.0"
nipype = "^1.8.5"
pandas = "^1.5.3"

[tool.poetry.dev-dependencies]
pytest = "^6.1.2"
pytest-cov = "^2.10.1"
pytest-mock = "^3.3.1"
coverage = {extras = ["toml"], version = "^5.3"}
black = "^22.3.0"
isort = "^5.6.4"
pylint = "^2.13.3"
pycodestyle = "^2.8.0"
pydocstyle = "^6.1.1"
mypy = "^0.942"
ipython = "^8.0.1"
pre-commit = "^2.20.0"


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.core.masonry.api"
